# isleservice-py

./: .gitignore  Dockerfile  Makefile  README.md  azure-pipelines.yml  pip-freeze.txt  setup.cfg  setup.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
service/: __init__.py  __main__.py  _name.py  _start.py  api.py
service/routes/: greet.py
zdevelop/make_scripts/: make_name.py
zdevelop/tests/: test_example.py
zdocs/: redoc_api.html  swagger.yml
zdocs/source/: conf-template  conf.py  index.rst  swagger.yml
